crates/axolotchi-slack/src/blocks/snapshots/axolotchi_slack__blocks__alert__tests__snapshot_device_gone.snap
---
source: crates/axolotchi-slack/src/blocks/alert.rs
expression: alert_message(&vm)
---
{
  "blocks": [
    {
      "text": {
        "text": "🚨 Kitchen Pi has gone missing.",
        "type": "mrkdwn"
      },
      "type": "section"
    },
    {
      "elements": [
        {
          "text": "Axo is watching the network.",
          "type": "mrkdwn"
        }
      ],
      "type": "context"
    }
  ],
  "text": "Kitchen Pi has gone missing."
}
