crates/axolotchi-slack/src/blocks/snapshots/axolotchi_slack__blocks__alert__tests__snapshot_device_joined.snap
---
source: crates/axolotchi-slack/src/blocks/alert.rs
expression: alert_message(&base())
---
{
  "blocks": [
    {
      "text": {
        "text": "🧐 Kitchen Pi just joined the network.",
        "type": "mrkdwn"
      },
      "type": "section"
    },
    {
      "elements": [
        {
          "text": "Axo is watching the network.",
          "type": "mrkdwn"
        }
      ],
      "type": "context"
    }
  ],
  "text": "Kitchen Pi just joined the network."
}
