crates/axolotchi-slack/src/blocks/snapshots/axolotchi_slack__blocks__alert__tests__snapshot_ip_changed.snap
---
source: crates/axolotchi-slack/src/blocks/alert.rs
expression: alert_message(&vm)
---
{
  "blocks": [
    {
      "text": {
        "text": "🧐 Kitchen Pi's IP changed from 10.0.0.11 to 10.0.0.21.",
        "type": "mrkdwn"
      },
      "type": "section"
    },
    {
      "elements": [
        {
          "text": "Axo is watching the network.",
          "type": "mrkdwn"
        }
      ],
      "type": "context"
    }
  ],
  "text": "Kitchen Pi's IP changed from 10.0.0.11 to 10.0.0.21."
}
